fix mobile nav horizontal scrolling, and content scrolling #74

--- a/assets/scss/_shame.scss
+++ b/assets/scss/_shame.scss
@@ -77,3 +77,7 @@
 	left: -9999px;
 	position: fixed;
 }
+
+.no-scroll {
+	overflow: hidden;
+}
