--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -137,6 +137,8 @@
 		min-width: 10em;
 
 		@include query-below($lap) {
+			margin-top: 10px;
+
 			li {
 				display: block;
 			}
@@ -203,8 +205,8 @@
 	}
 }
 
-@include query-below($lap) {
-	.main-navigation {
+.main-navigation {
+	@include query-below($lap) {
 		position: fixed;
 		top: 0;
 		left: -100%;
@@ -227,14 +229,19 @@
 	}
 }
 
+@media screen and (max-width: 600px) {
+	.main-navigation { position: absolute; }
+	.grid.grid { position: static; }
+}
+
 @include query-below($lap) {
 	.admin-bar .main-navigation {
-		padding-top: 32px;
+		padding-top: 56px;
 	}
 }
 @media screen and (max-width: 782px) {
 	.admin-bar .main-navigation {
-		padding-top: 46px;
+		padding-top: 70px;
 	}
 }
 
@@ -276,6 +283,13 @@
 		margin-top: 10px;
 		will-change: transform;
 	}
+}
+
+.mobile-header-wrapper {
+	position: absolute;
+	top: 0; left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 
